--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,18 @@
-<h2>Welcome to Financial Advisor</h2>
+<!-- with css -->
+<head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="{{url_for("static",filename="styles.css")}}">
+</head>
 
-<form action="/prediction_DBS" method="post">
-    <p>Please enter the SGD/USD exchange rate (eg 1.31)</p>
-    <input type="number"step="0.01" name="q">
-    <input type="submit" value="Enter">
-</form>
+<body>
+<div class="container">
+    <h2>Welcome to Financial Advisor</h2>
+    <form action="/prediction_DBS" method="post">
+        <p>Please enter the SGD/USD exchange rate (eg 1.31)</p>
+        <input type="number"step="0.01" name="q">
+        <input type="submit" value="Enter">
+    </form>
+</div>
+</body>
+
+
