--- a/templates/userlog.html
+++ b/templates/userlog.html
@@ -1,4 +1,3 @@
-<!-- with css -->
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for("static",filename="styles.css")}}">
@@ -6,13 +5,9 @@
 
 <body>
 <div class="container">
-    <h2>Welcome to Financial Advisor</h2>
+    <h2>User Log : {{r}}</h2>
     <form action="/main" method="post">
-        <p>Please enter your name : </p>
-        <input type="text" name="q">
-        <input type="submit" value="Enter">
+        <input type="submit" value="Main">
     </form>
 </div>
 </body>
-
-
