--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
 
 <body>
 <div class="container">
-    <h2>Welcome to Financial Advisor</h2>
+    <h2>Welcome to Group 6 Financial Advisor </h2>
     <form action="/main" method="post">
-        <p>Please enter your name : </p>
+        <p>My name is Hello, May i know your name please? </p>
         <input type="text" name="q">
         <input type="submit" value="Enter">
     </form>
